--- a/pages/Status.html
+++ b/pages/Status.html
@@ -9,7 +9,7 @@
                 </head>
                 <div class="topnav">
                     <a href="">Invite</a>
-                    <a href="#">Commands</a>
+                    <a href="./commands.html">Commands</a>
                     <a href="./Status.html">Cluster Status</a>
                     <a href="">Bot Status</a>
                     <a href="../index.html">Home</a>
